[workspace]
members = ["contracts/*"]

[profile.release.package.minter]
codegen-units = 1
incremental = false

[profile.release.package.legacy-marketplace]
codegen-units = 1
incremental = false

[profile.release.package.pg721]
codegen-units = 1
incremental = false

[profile.release.package.royalty-group]
codegen-units = 1
incremental = false

[profile.release.package.whitelist]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
