[workspace]
members = ["contracts/nft/*", "contracts/relationship/*"]

[profile.release.package.auction-english]
codegen-units = 1
incremental = false

[profile.release.package.marketplace-legacy]
codegen-units = 1
incremental = false

[profile.release.package.marketplace-v2]
codegen-units = 1
incremental = false

[profile.release.package.minter]
codegen-units = 1
incremental = false

[profile.release.package.minter-metadata-onchain]
codegen-units = 1
incremental = false

[profile.release.package.pg721]
codegen-units = 1
incremental = false

[profile.release.package.pg721-legacy]
codegen-units = 1
incremental = false

[profile.release.package.pg721-metadata-onchain]
codegen-units = 1
incremental = false

[profile.release.package.royalty-group]
codegen-units = 1
incremental = false

[profile.release.package.whitelist]
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true
opt-level = 3
debug = false
debug-assertions = false
