[package]
name = "legacy-marketplace"
version = "0.3.0"
authors = ["Orkun Külçe <orkunkl@users.noreply.github.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cosmwasm-std = { version = "1.0.0-beta" }
cosmwasm-storage = { version = "1.0.0-beta" }
cw-storage-plus = "0.11"
cw2 = "0.11"
cw721 = "0.11"
cw721-base = { version = "0.11", features = ["library"] }
schemars = "0.8.7"
serde = { version = "1.0.127", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.26" }

[dev-dependencies]
anyhow = "1"
cosmwasm-schema = { version = "1.0.0-beta" }
cw-multi-test = "0.13.1"
derivative = "2"
