[package]
name = "pg721-legacy"
version = "0.2.0"
authors = ["Orkun Külçe <orkunkl@users.noreply.github.com>"]
edition = "2018"

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "artifacts/*",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[features]
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all instantiate/execute/query exports
library = []

[dependencies]
cw2 = "0.11"
cw721 = { git = "https://github.com/CosmWasm/cw-nfts", branch = "main"}
cw721-base = { git = "https://github.com/CosmWasm/cw-nfts", branch = "main", features = ["library"] }
cosmwasm-std = { version = "1.0.0-beta3" }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = { version = "1.0" }

[dev-dependencies]
cosmwasm-schema = { version = "1.0.0-beta3" }
cw-multi-test = { git = "https://github.com/CosmWasm/cw-plus" }
