[package]
name = "friend"
version = "0.1.0"
edition = "2021"
authors = ["Tasio Victoria <tasio@envadiv.com>",]
repository = "https://github.com/envadiv/passage-contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
cosmwasm-std = "1.1.9"
cosmwasm-schema = "1.1.9"
cw-storage-plus = "1.0.1"
cw2 = "1.0.1"
thiserror = { version = "1.0.38" }

[dev-dependencies]
cw-multi-test = { version = "0.16.2" }
